compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_multiple_errors_are_local_with_inferred_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1480
expression: "const str: MyInvalidType = \"str\"\nconst assignment: String = str"
---
----- SOURCE CODE
const str: MyInvalidType = "str"
const assignment: String = str

----- ERROR
error: Unknown type
  ┌─ /src/one/two.rakun:1:12
  │
1 │ const str: MyInvalidType = "str"
  │            ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.
